[package]
name = "stone-mason"
authors = ["Nate Usher"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nated0g/stone-mason"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-bedrockruntime = "1.1.0"
anyhow = "1.0.75"
derive_builder = "0.12.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.108"

[dev-dependencies]
aws-config = { version= "1.0.1", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
